# OpenGL_Learning

./: .gitignore  CMakeLists.txt  build.sh  readme.md
.cache/clangd/index/: config.h.6725284B8B2174FA.idx  glad.c.6389CC43ACF5385E.idx  glad.h.2B9272A6A84F571E.idx  glfw3.h.1E38F021C8AC9DA7.idx  khrplatform.h.B7A673FE1A327A4D.idx  main.cpp.2458F6A70164104F.idx  triangle_mesh.cpp.C7787FF5A01D08BF.idx  triangle_mesh.h.6E51E67DB388CEA4.idx
shaders/: vertex.txt
src/: SolarSystem.cpp  config.h  main.cpp  sinwaves.cpp  triangle_mesh.cpp
